<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFF"
        android:padding="5dp"
        >
        <ImageView
            android:id="@+id/UserProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/UserProfile"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_toEndOf="@id/UserProfile"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_marginRight="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp" />
            <TextView
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_marginEnd="80dp" />
            <TextView
                android:id="@+id/UserMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_marginEnd="80dp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/EditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_margin="25dp"
            android:contentDescription="@string/todo"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/HelpCenter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_help_24"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:gravity="center"
                android:text="@string/help_center"
                android:layout_marginStart="60dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="50dp"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="50dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ShareApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_share_24"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:gravity="center"
                android:text="@string/share_us"
                android:layout_marginStart="60dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="50dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="50dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/RateUs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_star_24"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:gravity="center"
                android:text="@string/rate_us"
                android:layout_marginStart="60dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="50dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="50dp" />
        </RelativeLayout>
        <TextView
            android:id="@+id/Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="#FF1100"
            android:gravity="center_horizontal"
            android:layout_margin="25dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>